# wasm_terminal_2048

./: .gitignore  Cargo.toml  LICENSE  READMD.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: game.rs  lib.rs  main.rs  tile.rs
wasm/: Cargo.toml  build.sh  start-server-py2.sh  start-server-py3.sh
wasm/src/: lib.rs
wasm/test-server/: server-py2.py  server-py3.py
wasm/web/: app.js  index.html  package.json  wasm_terminal_2048_web.js  wasm_terminal_2048_web_bg.wasm
