[package]
name = "wasm_terminal_2048_web"
version = "0.1.0"
authors = ["ryanpig <ryanpig@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
 

[dependencies]
wasm-bindgen = "0.2"
wasm_terminal_2048 = { path = "../" }

